--- a/issues/1168/general.yaml
+++ b/issues/1168/general.yaml
@@ -1,45 +1,268 @@
 messages:
-  - type: running_annexes
-    extra_links:
+  - extra_links:
       - M1400_ICC
       - BUREAUFAX
       - ROA
+    type: running_annexes
   - type: approved_recommendations
     by: AAP-53
     procedures: Recommendation ITU-T A.8
     items:
-      G.993.2: 2019-02
-      G.993.5: 2019-02
-      G.997.1: 2019-02
-      G.999.1: 2019-02
-  - type: telephone_service
-    contents: general/ts.adoc
+      G.993.2: 2019-02-01
+      G.993.5: 2019-02-01
+      G.997.1: 2019-02-01
+      G.999.1: 2019-02-01
   - type: misc_communications
     contents: general/misc_comms.adoc
+  - contents:
+      - country_name:
+          en: 'Denmark '
+        phone_code: '45'
+        contact:
+          en: "Danish Energy Agency\nAmaliegade 44\n1256 COPENHAGEN K\nDenmark\nTel:\t+45 33 92 67 00 \nFax:\t+45 33 11 47 43\nE-mail:\tens@ens.dk \nURL:\twww.ens.dk "
+        communications:
+          - date: 2019-03-01
+            contents:
+              en:
+                type: doc
+                content:
+                  - type: paragraph
+                    content:
+                      - type: text
+                        text: 'The '
+                      - type: text
+                        marks:
+                          - type: em
+                        text: Danish Energy Agency
+                      - type: text
+                        text: >-
+                          , Copenhagen, announces the following updates to the
+                          national numbering plan of Denmark:
+                  - type: bullet_list
+                    content:
+                      - type: list_item
+                        content:
+                          - type: paragraph
+                            content:
+                              - type: text
+                                text: Assignment – Mobile communication services
+                  - type: table
+                    content:
+                      - type: table_row
+                        content:
+                          - type: table_cell
+                            attrs:
+                              colspan: 1
+                              rowspan: 1
+                              colwidth: null
+                            content:
+                              - type: paragraph
+                                content:
+                                  - type: text
+                                    marks:
+                                      - type: em
+                                    text: Provider
+                          - type: table_cell
+                            attrs:
+                              colspan: 1
+                              rowspan: 1
+                              colwidth: null
+                            content:
+                              - type: paragraph
+                                content:
+                                  - type: text
+                                    marks:
+                                      - type: em
+                                    text: Numbering series
+                          - type: table_cell
+                            attrs:
+                              colspan: 1
+                              rowspan: 1
+                              colwidth: null
+                            content:
+                              - type: paragraph
+                                content:
+                                  - type: text
+                                    marks:
+                                      - type: em
+                                    text: Date of assignment
+                      - type: table_row
+                        content:
+                          - type: table_cell
+                            attrs:
+                              colspan: 1
+                              rowspan: 1
+                              colwidth: null
+                            content:
+                              - type: paragraph
+                                content:
+                                  - type: text
+                                    text: SimService A/S
+                          - type: table_cell
+                            attrs:
+                              colspan: 1
+                              rowspan: 1
+                              colwidth: null
+                            content:
+                              - type: paragraph
+                                content:
+                                  - type: text
+                                    text: 551defgh
+                          - type: table_cell
+                            attrs:
+                              colspan: 1
+                              rowspan: 1
+                              colwidth: null
+                            content:
+                              - type: paragraph
+                                content:
+                                  - type: text
+                                    text: 28.II.2019
+                  - type: bullet_list
+                    content:
+                      - type: list_item
+                        content:
+                          - type: paragraph
+                            content:
+                              - type: text
+                                text: Assignment – Freephone numbers
+                  - type: table
+                    content:
+                      - type: table_row
+                        content:
+                          - type: table_cell
+                            attrs:
+                              colspan: 1
+                              rowspan: 1
+                              colwidth: null
+                            content:
+                              - type: paragraph
+                                content:
+                                  - type: text
+                                    marks:
+                                      - type: em
+                                    text: Provider
+                          - type: table_cell
+                            attrs:
+                              colspan: 1
+                              rowspan: 1
+                              colwidth: null
+                            content:
+                              - type: paragraph
+                                content:
+                                  - type: text
+                                    marks:
+                                      - type: em
+                                    text: Numbering series
+                          - type: table_cell
+                            attrs:
+                              colspan: 1
+                              rowspan: 1
+                              colwidth: null
+                            content:
+                              - type: paragraph
+                                content:
+                                  - type: text
+                                    marks:
+                                      - type: em
+                                    text: Date of assignment
+                      - type: table_row
+                        content:
+                          - type: table_cell
+                            attrs:
+                              colspan: 1
+                              rowspan: 1
+                              colwidth: null
+                            content:
+                              - type: paragraph
+                                content:
+                                  - type: text
+                                    text: Ipvision A/S
+                          - type: table_cell
+                            attrs:
+                              colspan: 1
+                              rowspan: 1
+                              colwidth: null
+                            content:
+                              - type: paragraph
+                                content:
+                                  - type: text
+                                    text: 809901gh
+                          - type: table_cell
+                            attrs:
+                              colspan: 1
+                              rowspan: 1
+                              colwidth: null
+                            content:
+                              - type: paragraph
+                                content:
+                                  - type: text
+                                    text: 1.III.2019
+                  - type: paragraph
+    type: telephone_service_2
   - type: service_restrictions
     items:
-      - country: Seychelles
+      - country:
+          en: Seychelles
         ob: 1006
         page: 13
-      - country: Slovakia
+      - country:
+          en: Slovakia
         ob: 1007
         page: 12
-      - country: Malaysia
+      - country:
+          en: Malaysia
         ob: 1013
         page: 5
-      - country: Thailand
+      - country:
+          en: Thailand
         ob: 1034
         page: 5
-      - country: São Tomé and Principe
+      - country:
+          en: São Tomé and Principe
         ob: 1039
         page: 14
-      - country: Uruguay
+      - country:
+          en: Uruguay
         ob: 1039
         page: 14
-      - country: 'Hong Kong, China'
+      - country:
+          en: 'Hong Kong, China'
         ob: 1068
         page: 4
-      - country: Ukraine
+      - country:
+          en: Ukraine
         ob: 1148
         page: 5
   - type: callback_procedures
+  - type: misc_communications
+    contents:
+      en:
+        type: doc
+        content:
+          - type: paragraph
+            content:
+              - type: text
+                marks:
+                  - type: strong
+                text: Serbia
+          - type: paragraph
+            content:
+              - type: text
+                text: 'Communication of 28.II.2019:'
+          - type: paragraph
+            content:
+              - type: text
+                text: On the occasion of the 73
+              - type: text
+                marks:
+                  - type: superscript
+                text: rd
+              - type: text
+                text: ' anniversary of the foundation of the radio club “Pozarevac” from Pozarevac, the Serbian Administration authorizes the radio club “Pozarevac” to use the special call sign '
+              - type: text
+                marks:
+                  - type: strong
+                text: YU73BFG
+              - type: text
+                text: ' from 1 March to 31 December 2019.'
