--- a/issues/1184/general.yaml
+++ b/issues/1184/general.yaml
@@ -14,6 +14,8 @@ messages:
       X.1232: 2019-10-01
       Y.3800: 2019-10-01
     type: approved_recommendations
+    by: AAP-69
+    procedures: Recommendation ITU-T A.8
   - type: telephone_service_2
     contents:
       - country_name:
@@ -554,3 +556,31 @@ messages:
         ob: 1148
         page: 5
   - type: callback_procedures
+  - type: misc_communications
+    contents:
+      en:
+        type: doc
+        content:
+          - type: paragraph
+            content:
+              - type: text
+                marks:
+                  - type: strong
+                text: Serbia
+          - type: paragraph
+            content:
+              - type: text
+                text: 'Communication of 23.X.2019:'
+          - type: paragraph
+            content:
+              - type: text
+                text: >-
+                  On the occasion of the "YOTA (Youngsters on the Air)” month,
+                  the Serbian Administration authorizes a radio station of the
+                  Amateur Radio Union of Serbia to use the special call sign 
+              - type: text
+                marks:
+                  - type: strong
+                text: YT19YOTA
+              - type: text
+                text: " from 1\_to 31\_December\_2019."
